syntax = "proto3";

package calendarpb;

import "google/protobuf/timestamp.proto";

service Calendar {
    rpc CreateEvent (CreateEventReq) returns (CreateEventRes);
    rpc GetEvent (GetEventReq) returns (GetEventRes);
    rpc UpdateEvent (UpdateEventReq) returns (UpdateEventRes);
}

message Event {
    uint64 UUID = 1;
    string title = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
    string description = 5;
    uint64 userId = 6;
    uint32 noticeTime = 7;
}

message CreateEventReq {
  Event event = 1;
}

message CreateEventRes {
    uint64 UUID = 1;
}

message GetEventReq {
    uint64 UUID = 1;
}

message GetEventRes {
    Event event = 1;
    string error = 2;
}

message UpdateEventReq {
    Event event = 1;
}

message UpdateEventRes {
    Event event = 1;
    string error = 2;
}

